# openmp_offload_testing

./: CMakeLists.txt
arch/ecmwf/hpc2020/nvhpc/24.5/: env.sh  toolchain.cmake
arch/europhpc/lumi/rocm-afar/5.3/: env.sh  toolchain.cmake
cmake/: check_openmp_offload.cmake  compile_options.cmake  fetchcontent_ecbuild.cmake
src/: test_openacc_target_attach.F90  test_openmp_target_attach.F90  test_openmp_target_present.F90  test_openmp_target_runtime.F90  test_openmp_target_runtime_hipfort.F90  test_openmp_target_struct.F90
